fixed some layout problems, added mobile resolution [wip]

--- a/global.css
+++ b/global.css
@@ -1,7 +1,7 @@
 body {
     position: absolute;
     background-size: cover;
-    background-attachmen: fixed;
+    width: 100%;
 }
 
 main {
@@ -17,21 +17,19 @@ main > h3 {
     text-align: inherit;
     margin: inherit;
     width: 70%;
-    padding-top: 5%;
     justify-content: center;
 }
 
 nav {
     position: fixed;
     top: 0;
-    width: 100%;
     display: flex;
     background-color: #965A5A;
 }
 
-nav > a {
-    align-self: flex-end;
-    margin-bottom: 0;
+nav > div > .menu-content {
+    justify-content: flex-end;
+    bottom: 0;
     text-decoration: none;
     color: #413939;
 }
@@ -50,18 +48,18 @@ footer {
     color: #413939;
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px) {
     .big {
         display: none;
     }
     
-    nav > .mini {
+    nav > .mini {     
         display: block;       
         color: black;
         align-self: flex-end;
     }
 
-    div > .menu-content {
+    nav > .menu-content {
         display: hidden;
     }
 
